@@ -1,12 +1,0 @@
-##################################
-# $Id: Makefile.linux,v 1.1 2004/05/11 14:59:46 jonnymind Exp $
-#
-# Makefile for XWT Test program
-#
-
-
-PRGFLAGS=-I../include
-LIBS=`pkg-config --libs gtk+-2.0` -lxwt -lxwt_gtk -lxwt
-
-TARGETS=xwt_test  xwt_test1
-include ../Rules.make
