@@ -1,16 +1,0 @@
-##################################
-# $Id: Makefile.mingw32,v 1.1 2003/11/28 14:46:34 lf_sfnet Exp $
-#
-# Makefile for XWT Test program
-#
-
-TARGET = xwt_test
-SOURCES = xwt_test.prg
-
-#TARGET = t_browse
-#SOURCES = t_browse.prg
-
-PRGFLAGS=-I../include
-LIBS=-L../lib -lxwt -lxwt_gtk -lxwt `pkg-config --libs gtk+-2.0` 
-
-include ../Rules.make
