@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2 2004/06/14 18:02:51 lculik Exp $
+ * $Id: ChangeLog,v 1.3 2004/06/16 13:49:58 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-08-26 22:00 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
+    * contrib/xwt2/Rules.make
+      * synced with contrib/xwt to manage msys/mingw32
+    * contrib/xwt2/tests/Makefile
+    - contrib/xwt2/tests/Makefile.mingw32
+    - contrib/xwt2/tests/Makefile.linux
+      * synced with contrib/xwt to manage msys/mingw32
+    * contrib/xwt2/tests/xwt_test1.prg 
+      * reformat to clean eol
+
 2004-06-16 10:50 UTC-0300 Luiz Rafael Culik <culikr /at / brturbo.com>
     * xwt_gtk_base.c
       xwt_gtk_layout.c
